--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "TransitionMask",
+	"name": "com.a-rosuko.transition-mask",
+	"displayName": "TransitionMask",
 	"version": "1.0.0",
 	"unity": "2020.1",
 	"description": "Image Transition Mask Shader",
